--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-slide-template/sample.aux
-slide-template/sample.fdb_latexmk
-slide-template/sample.fls
-slide-template/sample.log
-slide-template/sample.nav
-slide-template/sample.out
-slide-template/sample.snm
-slide-template/sample.synctex.gz
-slide-template/sample.toc
-slide-template/sample.vrb
+*.log
+*.nav
+*.out
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.aux
+*.fdb_latexmk
+*.fls
